# sim2real

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.sh  sniff_can.py  sniff_can_kinematics.py  speed_test.py
hoku/: __init__.py  config.py  hoku_mujoco.py  mujoco_controller.py  robot_aligned.urdf  robot_aligned.xml
hoku/assets/: 2170.part  2170.stl  actuator_housing_bearing_axle_female.part  actuator_housing_bearing_axle_female.stl  actuator_housing_bearing_axle_male.part  actuator_housing_bearing_axle_male.stl  actuator_rod_connection.part  actuator_rod_connection.stl  ankle_actuator_mounting_plate_strengthener_v11.part  ankle_actuator_mounting_plate_strengthener_v11.stl  ankle_plate_bottom.part  ankle_plate_bottom.stl  ankle_plate_bottom_mirrored.part  ankle_plate_bottom_mirrored.stl  ankle_plate_top.part  ankle_plate_top.stl  ankle_plate_top_mirrored.part  ankle_plate_top_mirrored.stl  b608zz.part  b608zz.stl  cell_holder_1.part  cell_holder_1.stl  cell_holder_2.part  cell_holder_2.stl  cell_holder_3.part  cell_holder_3.stl  cell_holder_4.part  cell_holder_4.stl  femur_left.part  femur_left.scad  femur_left_mirrored.part  femur_left_mirrored.scad  fl608zz.part  fl608zz__2.part  fl608zz__2.stl  foot_sole_left.part  foot_sole_left.scad  foot_sole_left.stl  foot_sole_left_mirrored.part  foot_sole_left_mirrored.scad  (+83 more)
hoku/assets/merged/: femur_left_collision.stl  femur_left_visual.stl  femur_right_collision.stl  femur_right_visual.stl  foot_left_collision.stl  foot_left_visual.stl  foot_pivot_2_visual.stl  foot_pivot_collision.stl  foot_right_collision.stl  foot_right_visual.stl  hip_center_collision.stl  hip_center_visual.stl  hip_pitch_left_2_visual.stl  hip_pitch_left_collision.stl  hip_pitch_left_visual.stl  hip_pitch_right_collision.stl  hip_pitch_right_visual.stl  hip_roll_left_collision.stl  hip_roll_right_collision.stl  tibia_left_collision.stl  tibia_left_visual.stl  tibia_right_collision.stl  tibia_right_visual.stl  torso_roll_collision.stl  torso_roll_visual.stl  torso_yaw_collision.stl  torso_yaw_visual.stl
system_identification/: README.md  __init__.py  config.json  kinematics.py  pyproject.toml  requirements-dev.txt  requirements.txt  system_identification.py
system_identification/config/: config.json  config_big_one.json  config_small_one.json
system_identification/scripts/: __init__.py  analyse.py  async_loop.py  chirp.py  chirp_data.pt  clear_data.sh  config.json  controllers.py  convert_json_to_pt.py  hardware_test.py  ik_registry.py  inspect_pt.py  interpolation.py  motor_stats.py  realtime.py  results.py  sysid.py  system_identification.py  test_modules.py  thread_utils.py
system_identification/tests/: __init__.py  benchmark_max_rate.py  speed_test.py  test_interpolation.py  test_latency.py  test_system_identification.py
