[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim2real"
version = "0.1.0"
description = "System identification for robot actuators using chirp signals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "NRobotics" }
]
keywords = ["robotics", "system-identification", "control", "actuators", "CAN"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "python-can>=4.0.0",
    "typing-extensions>=4.0.0",
    "python-can-usbtingo>=1.0.0",
    "python-can-remote>=0.2.4",
    "pymodbus>=3.11.3",
    "pyserial>=3.4",
    "spd3303x>=1.0.3",
    "humanoid-messages @ git+https://github.com/NRobotics/can-bus-protocol.git@ff66fa8c2230a92bdda79cb3f2a6044d1930d7f0#subdirectory=python",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
sysid = "system_identification.system_identification:main"
sysid-analyse = "system_identification.scripts.analyse:main"
speed-test = "system_identification.tests.speed_test:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["system_identification*"]

# Ruff configuration - fast Python linter and formatter
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["system_identification", "humanoid_messages"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration - static type checker
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "can.*",
    "matplotlib.*",
    "numpy.*",
    "humanoid_messages.*",
]
ignore_missing_imports = true
ignore_errors = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["system_identification/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

